feat: 심볼 서버 자동 설정 기능 구현
  구현 내용 요약

  1. 생성된 파일

  - DebugUtils.h (Mundi/Source/Runtime/Core/Misc/DebugUtils.h)
    - FDebugUtils::InitializeSymbolServer() 정적 메서드 선언
  - DebugUtils.cpp (Mundi/Source/Runtime/Core/Misc/DebugUtils.cpp)
    - _putenv_s()를 사용하여 환경 변수 설정
    - _NT_SYMBOL_PATH: 로컬 캐시, 네트워크 심볼 서버, Microsoft 심볼 서버 포함
    - _NT_SOURCE_PATH: 소스 서버 지원 활성화

  2. 수정된 파일

  - main.cpp (Mundi/main.cpp:17)
    - WinMain 시작 부분에 FDebugUtils::InitializeSymbolServer() 호출 추가
    - 크래시 핸들러 초기화보다 먼저 실행되도록 배치
  - Mundi.vcxproj
    - DebugUtils.cpp를 ClCompile 항목에 추가
    - DebugUtils.h를 ClInclude 항목에 추가

  동작 방식

  프로그램 시작 시 자동으로 다음 환경 변수가 설정됩니다:
  _NT_SYMBOL_PATH = SRV*C:\SymbolCache*\\172.21.11.114\MundiSymbols\Symbols*https://msdl.microsoft
  .com/download/symbols
  _NT_SOURCE_PATH = SRV*

  이를 통해:
  - Visual Studio 수동 설정 불필요
  - Rider, VSCode 등 다른 IDE에서도 동작
  - 덤프 파일 열 때 자동으로 PDB 다운로드

--- a/Mundi/Mundi.vcxproj
+++ b/Mundi/Mundi.vcxproj
@@ -277,6 +277,7 @@ powershell.exe -ExecutionPolicy Bypass -File "$(ProjectDir)BuildTools\SymbolServ
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Source\Editor\FbxLoader.cpp" />
     <ClCompile Include="Source\Runtime\AssetManagement\SkeletalMesh.cpp" />
+    <ClCompile Include="Source\Runtime\Core\Misc\DebugUtils.cpp" />
     <ClCompile Include="Source\Runtime\Core\Misc\VertexData.cpp" />
     <ClCompile Include="Source\Runtime\Engine\Animation\AnimationRuntime.cpp" />
     <ClCompile Include="Source\Runtime\Engine\Animation\AnimBlendMath.cpp" />
@@ -767,6 +768,7 @@ powershell.exe -ExecutionPolicy Bypass -File "$(ProjectDir)BuildTools\SymbolServ
     <ClInclude Include="Source\Editor\PlatformProcess.h" />
     <ClInclude Include="Source\Editor\PlatformCrashHandler.h" />
     <ClInclude Include="Source\Runtime\AssetManagement\SkeletalMesh.h" />
+    <ClInclude Include="Source\Runtime\Core\Misc\DebugUtils.h" />
     <ClInclude Include="Source\Runtime\Core\Misc\Delegates.h" />
     <ClInclude Include="Source\Runtime\Core\Misc\Hash.h" />
     <ClInclude Include="Source\Runtime\Core\Misc\PathUtils.h" />
