feat: add ParticleModuleTrailSource

--- a/Mundi/Mundi.vcxproj.filters
+++ b/Mundi/Mundi.vcxproj.filters
@@ -1080,6 +1080,9 @@
     <ClCompile Include="Generated\UParticleModuleEventReceiverSpawn.generated.cpp">
       <Filter>Generated</Filter>
     </ClCompile>
+    <ClCompile Include="Generated\UParticleModuleTrailSource.generated.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Generated\UParticleModuleSizeScaleBySpeed.generated.h">
@@ -2252,6 +2255,9 @@
       <Filter>Generated</Filter>
     </ClInclude>
     <ClInclude Include="Generated\UParticleModuleEventReceiverSpawn.generated.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="Generated\UParticleModuleTrailSource.generated.h">
       <Filter>Generated</Filter>
     </ClInclude>
   </ItemGroup>
