--- a/.lfsconfig
+++ b/.lfsconfig
@@ -1,2 +1,2 @@
 [lfs]
-    url = https://github.com/TeshShin/Krafton_TechLab_Week12.git/info/lfs
+    url = https://github.com/sb-111/Krafton_TechLab_Week13/info/lfs
