--- a/Mundi/Mundi.vcxproj
+++ b/Mundi/Mundi.vcxproj
@@ -695,6 +695,8 @@ xcopy /y /d "$(ProjectDir)ThirdParty\lib\Physx\Release\PhysXFoundation_64.dll" "
     <ClCompile Include="Generated\FKConvexElem.generated.cpp" />
     <ClCompile Include="Generated\FKSphereElem.generated.cpp" />
     <ClCompile Include="Generated\FKSphylElem.generated.cpp" />
+    <ClCompile Include="Generated\UPhysicsAsset.generated.cpp" />
+    <ClCompile Include="Generated\UBodySetupCore.generated.cpp" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Shaders\Common\LightingBuffers.hlsl">
@@ -936,11 +938,13 @@ xcopy /y /d "$(ProjectDir)ThirdParty\lib\Physx\Release\PhysXFoundation_64.dll" "
     <ClInclude Include="Source\Runtime\Engine\Physics\AggregateGeometry.h" />
     <ClInclude Include="Source\Runtime\Engine\Physics\BodyInstance.h" />
     <ClInclude Include="Source\Runtime\Engine\Physics\BodySetup.h" />
+    <ClInclude Include="Source\Runtime\Engine\Physics\BodySetupCore.h" />
     <ClInclude Include="Source\Runtime\Engine\Physics\CollisionShapes.h" />
     <ClInclude Include="Source\Runtime\Engine\Physics\FKBoxElem.h" />
     <ClInclude Include="Source\Runtime\Engine\Physics\FKConvexElem.h" />
     <ClInclude Include="Source\Runtime\Engine\Physics\FKSphereElem.h" />
     <ClInclude Include="Source\Runtime\Engine\Physics\FKSphylElem.h" />
+    <ClInclude Include="Source\Runtime\Engine\Physics\PhysicsAsset.h" />
     <ClInclude Include="Source\Runtime\Engine\Physics\PhysicsSystem.h" />
     <ClInclude Include="Source\Runtime\Engine\Scripting\GameObject.h" />
     <ClInclude Include="Source\Runtime\Engine\Scripting\LuaArrayProxy.h" />
@@ -1231,6 +1235,8 @@ xcopy /y /d "$(ProjectDir)ThirdParty\lib\Physx\Release\PhysXFoundation_64.dll" "
     <ClInclude Include="Generated\FKConvexElem.generated.h" />
     <ClInclude Include="Generated\FKSphereElem.generated.h" />
     <ClInclude Include="Generated\FKSphylElem.generated.h" />
+    <ClInclude Include="Generated\UPhysicsAsset.generated.h" />
+    <ClInclude Include="Generated\UBodySetupCore.generated.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="BuildTools\CodeGenerator\generate.py" />
