--- a/Mundi/Mundi.vcxproj
+++ b/Mundi/Mundi.vcxproj
@@ -1,4 +1,4 @@
-<?xml version='1.0' encoding='utf-8'?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003" DefaultTargets="Build">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug_StandAlone|x64">
@@ -434,6 +434,7 @@ xcopy /y /d "$(ProjectDir)ThirdParty\lib\Physx\Release\PhysXFoundation_64.dll" "
     <ClCompile Include="Source\Runtime\Engine\Particles\ParticleDefinitions.cpp" />
     <ClCompile Include="Source\Runtime\Engine\Particles\ParticleStats.cpp" />
     <ClCompile Include="Source\Runtime\Engine\Physics\BodyInstance.cpp" />
+    <ClCompile Include="Source\Runtime\Engine\Physics\PhysicsScene.cpp" />
     <ClCompile Include="Source\Runtime\Engine\Physics\ConstraintInstance.cpp" />
     <ClCompile Include="Source\Runtime\Engine\Physics\PhysicsSystem.cpp" />
     <ClCompile Include="Source\Runtime\Engine\Physics\RagdollDebugRenderer.cpp" />
@@ -953,7 +954,9 @@ xcopy /y /d "$(ProjectDir)ThirdParty\lib\Physx\Release\PhysXFoundation_64.dll" "
     <ClInclude Include="Source\Runtime\Engine\Physics\FKSphereElem.h" />
     <ClInclude Include="Source\Runtime\Engine\Physics\FKSphylElem.h" />
     <ClInclude Include="Source\Runtime\Engine\Physics\PhysicsAsset.h" />
+    <ClInclude Include="Source\Runtime\Engine\Physics\PhysicsScene.h" />
     <ClInclude Include="Source\Runtime\Engine\Physics\PhysicsSystem.h" />
+    <ClInclude Include="Source\Runtime\Engine\Physics\PrePhysics.h" />
     <ClInclude Include="Source\Runtime\Engine\Physics\RagdollDebugRenderer.h" />
     <ClInclude Include="Source\Runtime\Engine\Scripting\GameObject.h" />
     <ClInclude Include="Source\Runtime\Engine\Scripting\LuaArrayProxy.h" />
